Fix block spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,11 +144,11 @@ body {
     }
 
     #card-stats__block2 {
-        margin-left: 64px
+        margin-left: 63px
     }
 
     #card-stats__block3 {
-        margin-left: 61px
+        margin-left: 60px
     }
 
     .card-image {
